--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Platina</title>
+		<title>⭐️ Superstar.Travel</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -62,17 +62,17 @@
 					<div class="active-banner-carousel">
 						<div class="banner-content col-lg-12 col-md-12">
 							<h1>
-								Enjoy Holidays <br>
-								with affordable Hotels
+								award winning <br>
+								travel testing
 							</h1>
-							<a href="#" class="head-btn btn text-uppercase">Start Searching</a>
+							<a href="#" class="head-btn btn text-uppercase">Inquire</a>
 						</div>
 						<div class="banner-content col-lg-12 col-md-12">
 							<h1>
-								Enjoy Holidays <br>
-								with affordable Hotels
+								get even better <br>
+								best in experience scouts
 							</h1>
-							<a href="#" class="head-btn btn text-uppercase">Start Searching</a>
+							<a href="#" class="head-btn btn text-uppercase">Inquire</a>
 						</div>
 					</div>
 											<div class="carousel-trigger">
@@ -298,7 +298,7 @@
 						<div class="booking-wrap col-lg-12">
 							<div class="row d-flex justify-content-center">
 								<div class="col-md-10 pb-80 header-text">
-									<h1>Book a Room</h1>
+									<h1>Book an Experience Tester</h1>
 									<p>
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
 									</p>
@@ -308,45 +308,19 @@
 								 <div class="row">
 								    <div class="col-lg-6 col-md-12">
 								    	<div class="row">
-									    	<div class="col-lg-6">
+									    	<div class="col-lg-12">
 												<input type="text" name="fname" class="single-in form-control" placeholder="First Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'" required="">
-												<input id="datepicker" name="arrival" class="single-in form-control"  onblur="this.placeholder = 'Arrival'" type="text" placeholder="Arrival" required>
-												<select name="room-type" class="app-select form-control" required>
-													<option data-display="Room Type">Room Type</option>
-													<option value="1">Room type 1</option>
-													<option value="2">Room type 2</option>
-													<option value="3">Room type 3</option>
-												</select>
-												<select name="adults" class="app-select form-control" required>
-													<option data-display="Adults">Adults</option>
-													<option value="1">1</option>
-													<option value="2">2</option>
-													<option value="3">3</option>
-												</select>
-									    	</div>
-									    	<div class="col-lg-6">
-									    		<input type="text" name="lname" class="single-in form-control" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'" required="">
-									    		<input id="datepicker2" name="departure" class="single-in form-control"  onblur="this.placeholder = 'Departure'" type="text" placeholder="Departure" required>
-									    		<select name="no-room" class="app-select form-control" required>
-													<option data-display="Number Of Rooms">Number Of Rooms</option>
-													<option value="1">1</option>
-													<option value="2">2</option>
-													<option value="3">3</option>
-												</select>
-												<select name="clild" class="app-select form-control">
-													<option data-display="Childs">Childs</option>
-													<option value="1">1</option>
-													<option value="2">2</option>
-													<option value="3">3</option>
-												</select>
-									    	</div>
+												<input type="text" name="lname" class="single-in form-control" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'" required="">
+												<input type="email" name="email" class="single-in form-control" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'" required="">
+	
+											</div>
 								    	</div>
 								    </div>
-								    <div class="col-lg-6 col-md-12">
+								    <div class="col-lg-6 col-md-6">
 								      	<textarea class="single-in form-control" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
 								    </div>
 										<div class="col-lg-12 d-flex justify-content-center send-btn">
-										<button class="primary-btn mt-20 text-uppercase ">book room<span class="lnr lnr-arrow-right"></span></button>
+										<button class="primary-btn mt-20 text-uppercase ">Inquire<span class="lnr lnr-arrow-right"></span></button>
 									</div>
 
 									<div class="alert-msg"></div>
@@ -382,17 +356,17 @@
 						<div class="single-info col-lg-3 col-md-6">
 							 <h4>Let’s Email Us</h4>
 							 <p>
-								hello@colorlib.com <br>
-								mainhelpinfo@colorlib.com <br>
-								infohelp@colorlib.com
+								hello@superstar.travel <br>
+								office@superstar.travel <br>
+								jobs@superstar.travel
 							 </p>
 						</div>
 						<div class="single-info col-lg-3 col-md-6">
 							 <h4>Customer Support</h4>
 							 <p>
-							 	support@colorlib.com <br>
-								emergencysupp@colorlib.com <br>
-								extremesupp@colorlib.com
+							 	support@superstar.travel <br>
+								emergencysuperstar.travel <br>
+								jobs@superstar.travel
 							 </p>
 						</div>
 					</div>
@@ -408,8 +382,7 @@
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
-								</p>
+									With experts in more than 28 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support.	With a reach of more than 800k people on social media platforms sharing unique experiences is part of the job							</p>
 							</div>
 						</div>
 						<div class="col-lg-4  col-md-6 col-sm-12">
