--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="">
 
 		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
+		<meta name="keywords" content="travel,flights,hotel,testing">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
@@ -90,10 +90,9 @@
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-md-8 pb-80 header-text">
-							<h1>Superb Facilities</h1>
+							<h1>First-Class Services</h1>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
-							</p>
+								Our values define who we are, underscore our commitment to clients and provide direction for everything we do.​							</p>
 						</div>
 					</div>
 					<div class="row">
@@ -103,7 +102,7 @@
 						      <div class="content-overlay"></div>
 						  		 <img class="content-image img-fluid d-block mx-auto" src="img/f1.jpg" alt="">
 						      <div class="content-details fadeIn-bottom">
-						        <h3 class="content-title">Resort Holiday package</h3>
+						        <h3 class="content-title">Resort Experience Package</h3>
 						      </div>
 						    </a>
 						  </div>
@@ -114,7 +113,7 @@
 						      <div class="content-overlay"></div>
 						  		 <img class="content-image img-fluid d-block mx-auto" src="img/f2.jpg" alt="">
 						      <div class="content-details fadeIn-bottom">
-						        <h3 class="content-title">Resort Holiday package</h3>
+						        <h3 class="content-title">Flight Experience Package</h3>
 						      </div>
 						    </a>
 						  </div>
@@ -125,7 +124,7 @@
 						      <div class="content-overlay"></div>
 						  		 <img class="content-image img-fluid d-block mx-auto" src="img/f3.jpg" alt="">
 						      <div class="content-details fadeIn-bottom">
-						        <h3 class="content-title">Resort Holiday package</h3>
+						        <h3 class="content-title">Trip Experience Package</h3>
 						      </div>
 						    </a>
 						  </div>
@@ -383,7 +382,7 @@
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
-									With experts in more than 28 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support.	With a reach of more than 800k people on social media platforms sharing unique experiences is part of the job							</p>
+									With experts in more than 28 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support.	With a reach of more than 800k people on social media platforms we are far more than a regular experience testing platform.					</p>
 							</div>
 						</div>
 						<div class="col-lg-4  col-md-6 col-sm-12">
