--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 						</div>
 						<div class="banner-content col-lg-12 col-md-12">
 							<h1>
-								get even better <br>
-								best in experience scouts
+								best in class experience scouts
 							</h1>
 							<a href="#" class="head-btn btn text-uppercase">Inquire</a>
 						</div>
@@ -142,12 +141,11 @@
 							<img class="img-fluid" src="img/about-img.jpg" alt="">
 						</div>
 						<div class="col-lg-6 col-md-12 about-right">
-							<h1>A very Lovely Welcome <br>
-							to our Hotel</h1>
+							<h1>A very Lovely Welcome <br></h1>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.
+									With our on-demand platform, you uncover ‘the why’ behind customer interactions. By understanding intent, you improve experiences, driving greater satisfaction and loyalty.
 							</p>
-							<button class="btn btn-black">Make Package of your own</button>
+							<button class="btn btn-black">Contact our experience scouts</button>
 						</div>
 					</div>
 				</div>
@@ -161,54 +159,28 @@
 						<div class="col-md-8 pb-80 header-text">
 							<h1>Superb Facilities</h1>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
-							</p>
+									Our on-demand, diverse and global panel means you receive accurate insights from the audiences you need.</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="sigle-facilities col-lg-4 col-md-6">
 							<span class="lnr lnr-rocket"></span>
-							<h4>Easy Flight Search</h4>
+							<h4>Easy Flight Testing</h4>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
+									Understand customer perceptions and expectations at every brand touchpoint to create campaigns and programs that capture and keep their attention.							</p>
 						</div>
 						<div class="sigle-facilities col-lg-4 col-md-6">
 							<span class="lnr lnr-magic-wand"></span>
-							<h4>Get Hotel Offers</h4>
+							<h4>Hotel Packages</h4>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
+									Understand how your customers perceive competitors to identify where your brand is falling behind. Quickly hone in on and target untapped areas of opportunity for big business wins.							</p>
 						</div>
 						<div class="sigle-facilities col-lg-4 col-md-6">
 							<span class="lnr lnr-gift"></span>
 							<h4>Holiday Packages</h4>
 							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
+									Learn how to create a compelling customer experience that outperforms the competition.							</p>
 						</div>
-						<div class="sigle-facilities col-lg-4 col-md-6">
-							<span class="lnr lnr-rocket"></span>
-							<h4>Easy Flight Search</h4>
-							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
-						</div>
-						<div class="sigle-facilities col-lg-4 col-md-6">
-							<span class="lnr lnr-magic-wand"></span>
-							<h4>Get Hotel Offers</h4>
-							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
-						</div>
-						<div class="sigle-facilities col-lg-4 col-md-6">
-							<span class="lnr lnr-gift"></span>
-							<h4>Holiday Packages</h4>
-							<p>
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct.
-							</p>
-						</div>
-
 
 					</div>
 				</div>
@@ -300,7 +272,7 @@
 								<div class="col-md-10 pb-80 header-text">
 									<h1>Book an Experience Tester</h1>
 									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
+										Don't hesitate - feel free to contact us and talk with an expert.
 									</p>
 								</div>
 							</div>
@@ -340,9 +312,7 @@
 						<div class="single-info col-lg-3 col-md-6">
 							 <h4>Visit Our Office</h4>
 							 <p>
-							 	56/8, bir uttam qazi nuruzzaman
-							 	road, west panthapath, kalabagan,
-							 	Dhanmondi, Dhaka - 1205
+								12 Sheikh Mohammed bin Rashid Blvd - Dubai
 							 </p>
 						</div>
 						<div class="single-info col-lg-3 col-md-6">
@@ -432,10 +402,9 @@
 								<h6>Follow Us</h6>
 								<p>Let us be social</p>
 								<div class="footer-social d-flex align-items-center">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-									<a href="#"><i class="fa fa-behance"></i></a>
+									<a href="https://www.facebook.com/BeautifulDestinations/"><i class="fa fa-facebook"></i></a>
+									<a href="https://www.youtube.com/channel/UC08NS8fyPpkYgnhj69fMXLg"><i class="fa fa-youtube"></i></a>
+									<a href="https://www.instagram.com/beautifuldestinations/"><i class="fa fa-instagram"></i></a>
 								</div>
 							</div>
 						</div>
@@ -443,7 +412,7 @@
 					<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
 						<p class="footer-text m-0">
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
 					</div>
