--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Author Meta -->
 		<meta name="author" content="Colorlib">
 		<!-- Meta Description -->
-		<meta name="description" content="">
+		<meta name="description" content="With experts in more than 37 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support. With a reach of more than 800k people on social media platforms we are far more than a regular experience testing platform.">
 
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="travel,flights,hotel,testing">
@@ -352,7 +352,7 @@
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
-									With experts in more than 28 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support.	With a reach of more than 800k people on social media platforms we are far more than a regular experience testing platform.					</p>
+									With experts in more than 37 countries our company was the first luxury travel agency to combine a digital experience with individually personalised support.	With a reach of more than 800k people on social media platforms we are far more than a regular experience testing platform.					</p>
 							</div>
 						</div>
 						<div class="col-lg-4  col-md-6 col-sm-12">
